# EventRevisionAnalyzer

./: .env  .gitignore  CreateEventsOfInterest.py  CreateTitlesOfInterest.py  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Utils/: JSONDataManager.py
docs/: Take-home events of interest.xlsx  Take-home resource document.docx  ~$Take-home events of interest.xlsx  ~$ke-home resource document.docx
eventrevisionanalyzer/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
pages/: urls.py  views.py
pages/components/: RevisionManager.py  TagManager.py
pages/components/API/: SessionManager.py  Wiki.py
pages/components/CRUD/: Event.py  EventRevision.py  Revision.py  RevisionTag.py  Title.py
pages/components/Tasks/: RevisionFetcher.py  TagAssigner.py
pages/config/: RevisionParameter.json
pages/models/: EventModel.py  RevisionModel.py  TagModel.py  TitleModel.py  __init__.py
pages/templates/: Dashboard.html  Manual.html
pages/templates/static/: Charts.js  GroupedBar.js  SelectUtilities.js  Timeline.js  style.css
tests/: test_dashboard_filter_queries.py  test_models.py  test_wiki_fetcher_and_tag_assigner.py
tests/static/: test1.txt  test2.txt  testdata.json
